# quasar-search

./: .clang-format  .clang-tidy  .codespellignore  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .semgrep.yml  .vale.ini  ACCESSIBILITY.md  ARCHITECTURE.md  AUDIT.md  AUTHORS  BUILD  BUILD.bazel  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DCO  DCO.md  Dockerfile  Doxyfile  ETHICS.md  GOVERNANCE.md  INCLUSION.md  LICENSE  MAINTAINERS.md  Makefile  NOTICE  PRIVACY.md  README.md  REUSE.toml  (+18 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  codecov.yml  codeql-config.yml  labeler.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.yml  feature.yml  feature_request.yml  security.yml
.github/codeql/: codeql-config.yml
.github/linters/: .cspell.json
.github/workflows/: abi-compat.yml  actionlint.yml  actions-pinning-check.yml  alpine-musl.yml  attest.yml  bandit.yml  bazel.yml  bench.yml  bloaty.yml  ci-matrix.yml  ci.yml  clang-analyzer.yml  clang-format.yml  clang-tidy.yml  cli-bats.yml  cmakelint.yml  codeql.yml  codespell.yml  commitlint.yml  container-buildx.yml  container-rootless.yml  container-scan.yml  container-scratch.yml  coverage-gate.yml  coverage.yml  cpack.yml  cppcheck.yml  cve-bin-tool.yml  cxx-standards.yml  cyclonedx.yml  dco-check.yml  dco.yml  dependency-review.yml  diffoscope.yml  docs-gh-pages.yml  docs-qa.yml  doxygen.yml  e2e.yml  editorconfig.yml  emscripten.yml  (+63 more)
.reuse/: dep5
.vale/styles/: README
.well-known/: security.txt
LICENSES/: Apache-2.0.txt  CC-BY-4.0.txt
_build2/: quasar-apex.pc
apps/: quasar-bench.cpp  quasar-cpu.cpp  quasar-grep.cpp  quasar-ls.cpp
bazel/: README.md
bench/: CMakeLists.txt  bench_smoke.cpp
benches/: macro_pipeline_bench.cpp  micro_search_bench.cpp
cmake/: QuasarApex.pc.in  QuasarApexConfig.cmake.in  quasar-apex.pc.in  quasar.map  quasarConfig.cmake.in  version.hpp.in
completions/: quasar-grep.bash  quasar-grep.fish  quasar-grep.zsh
completions/bash/: quasar-grep
completions/fish/: quasar-grep.fish
completions/zsh/: _quasar-grep
container/: Dockerfile.release  Dockerfile.rootless  Dockerfile.scratch  seccomp.json
docs/: ABI_POLICY.md  ABI_VERSIONING.md  ACCESSIBILITY.md  ADR-0001.md  ARCHITECTURE.md  BAZEL_BUILD.md  BENCHMARKING_GUIDE.md  BRANCHING_MODEL.md  BUILD_PRESETS.md  BUSINESS_CONTINUITY.md  BUS_FACTOR.md  CLI_ACCESSIBILITY.md  CLI_GUIDE.md  COMPLIANCE_MAP.md  CONSUMING_WITH_CMAKE.md  CONTAINER_HARDENING.md  CONTRIBUTOR_ONBOARDING.md  COVERAGE_POLICY.md  CRASH_HANDLING.md  DEPRECATION_POLICY.md  EMBEDDING.md  INCIDENT_COMMUNICATION.md  INTEGRATION_GUIDE.md  JSON_OUTPUT_SCHEMA.md  LEGAL.md  LTS_POLICY.md  MAINTAINERS_GUIDE.md  MEMORY_ALLOCATORS.md  MESON_BUILD.md  MMAP.md  OBSERVABILITY.md  OPERATIONS_RUNBOOK.md  PACKAGING.md  PACKAGING_PORTS.md  PERFORMANCE.md  PERFORMANCE_ADVANCED.md  PERFORMANCE_BUDGETS.md  PERFORMANCE_TUNING.md  PROFILING.md  PUBLIC_ROADMAP.md  (+22 more)
docs/adr/: 0000-template.md  0001-record-architecture-decisions.md  README.md
docs/rfcs/: 0000-template.md  README.md
examples/: CMakeLists.txt  embedding_demo.cpp  example_search.cpp
fuzz/: README.md  dictionary.dict  search_fuzz.cpp
fuzz/corpus/: README.md  basic.txt
include/quasar/: c_api.h  cpu.hpp  export.hpp  fs.hpp  glob.hpp  instrumentation.hpp  log.hpp  metrics.hpp  metrics_export.hpp  mmap.hpp  search.hpp  search_dispatch.hpp  thread_pool.hpp
man/: quasar-grep.1  quasar-ls.1
packaging/aur/: PKGBUILD
packaging/chocolatey/: quasar-apex.nuspec
packaging/debian/: control  rules
packaging/homebrew/: quasar-apex.rb
packaging/homebrew/Formula/: quasar-apex.rb
packaging/rpm/: quasar-apex.spec
packaging/scoop/: quasar-apex.json
packaging/windows/: quasar-apex.iss
packaging/winget/: manifest.yaml
policy/verification/: policy.yaml
presskit/: BRAND.md
sbom/: generate.py
schemas/: quasar-grep.schema.json  quasar_grep.schema.json
scripts/: bench_compare.py  build.sh  coverage.sh  lint.sh  test.sh
scripts/bench/: compare_bench.py
scripts/ci/: check_pinning.sh  size_guard.sh
scripts/pgo/: gen-prof.sh  use-prof.sh
scripts/profiling/: flamegraph.sh
scripts/release/: tarball_normalize.sh
scripts/sbom/: diff.py
snap/: snapcraft.yaml
src/: c_api.cpp  cpu.cpp  fs.cpp  mmap.cpp  search.cpp  search_dispatch.cpp  search_simd.cpp  thread_pool.cpp
tests/: e2e_grep.sh  fuzz_search.cpp  test_binary.cpp  test_c_api.c  test_dispatch.cpp  test_fs.cpp  test_ignore.cpp  test_mmap.cpp  test_schema_validate.py  test_search.cpp
tests/cli/: test_grep.bats
tests/data/: sample.txt
tests/json/: validate_json.sh
vcpkg-port/: vcpkg.json
whitepaper/: whitepaper.md
